# OpenGLPlayground

./: CMakeLists.txt  FindOpenGL.cmake
src/: Entity.cpp  Entity.h  Scene.cpp  Scene.h  main.cpp
src/CollisionManager/: CollisionManager.h
src/CollisionManager/QuadTree/: Box.cpp  Box.h  QuadTreeCollisionManager.cpp  QuadTreeCollisionManager.h
src/CollisionManager/Simple/: SimpleCollisionManager.cpp  SimpleCollisionManager.h
src/Components/: Component.h
src/Components/GraphicsComponent/: GraphicsComponent.cpp  GraphicsComponent.h
src/Components/PhysicsComponent/: PhysicsComponent.cpp  PhysicsComponent.h
src/util/: Vec2D.cpp  Vec2D.h
